Fix github raw links

--- a/Difference_in_Differences.ipynb
+++ b/Difference_in_Differences.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_stata(\"https://raw.github.com/scunning1975/mixtape/master/abortion.dta\")"
+    "data=pd.read_stata(\"https://github.com/scunning1975/mixtape/raw/master/abortion.dta\")"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_stata(\"https://raw.github.com/scunning1975/mixtape/master/abortion.dta\")"
+    "data=pd.read_stata(\"https://github.com/scunning1975/mixtape/raw/master/abortion.dta\")"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_stata(\"https://raw.github.com/scunning1975/mixtape/master/castle.dta\")"
+    "data=pd.read_stata(\"https://github.com/scunning1975/mixtape/raw/master/castle.dta\")"
    ]
   },
   {
