--- a/Panel_Data.ipynb
+++ b/Panel_Data.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "# Load data: \n",
-    "df=pd.read_stata(\"https://raw.github.com/scunning1975/mixtape/master/sasp_panel.dta\")\n",
+    "df=pd.read_stata(\"https://github.com/scunning1975/mixtape/raw/master/sasp_panel.dta\")\n",
     "# Drop missing data: \n",
     "df=df.dropna()\n",
     "# Keep balanced data (4 observations for each id)\n",
