--- a/Probability_and_Regression.ipynb
+++ b/Probability_and_Regression.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Read data\n",
     "def read_data(file):\n",
-    "    return pd.read_csv(\"https://raw.github.com/scunning1975/mixtape/master/\" + file)"
+    "    return pd.read_csv(\"https://github.com/scunning1975/mixtape/raw/master/\" + file)"
    ]
   },
   {
@@ -618,7 +618,7 @@
    ],
    "source": [
     "# Load data\n",
-    "auto = pd.read_stata('https://raw.github.com/scunning1975/mixtape/master/auto.dta')\n",
+    "auto = pd.read_stata('https://github.com/scunning1975/mixtape/raw/master/auto.dta')\n",
     "auto['length'] = auto['length'] - auto['length'].mean()\n",
     "\n",
     "# Fit models\n",
